added alt to img

--- a/index.html
+++ b/index.html
@@ -61,8 +61,8 @@
           </p>
           <a href="#" class="btn cta-btn">View Plans</a>
         </div>  
-        <img src="images/bg-pattern-intro-right-desktop.svg" class="bg-pattern-intro-right"/>
-        <img src="images/bg-pattern-intro-left-desktop.svg" class="bg-pattern-intro-left"/>
+        <img src="images/bg-pattern-intro-right-desktop.svg" alt="bg-pattern-intro-right" class="bg-pattern-intro-right"/>
+        <img src="images/bg-pattern-intro-left-desktop.svg"  alt="bg-pattern-intro-left" class="bg-pattern-intro-left"/>
     </section>
 
     <section class="info-section container">
@@ -177,12 +177,12 @@
       </div>
     </footer>
 
-    <!-- <div class="attribution">
+    <div class="attribution">
       Challenge by
       <a href="https://www.frontendmentor.io?ref=challenge" target="_blank"
         >Frontend Mentor</a
-      >. Coded by <a href="#">Deepak Maurya</a>.
-    </div> -->
+      >. Coded by <a href="https://www.linkedin.com/in/deepak-maurya-b62010157/">Deepak Maurya</a>.
+    </div>
     <script src="index.js"></script>
   </body>
 </html>
