--- a/index.html
+++ b/index.html
@@ -45,24 +45,32 @@
       </div>
     </header>
     <section class="hero-section">
-        <img
+      <img
         src="images/image-intro-desktop.jpg"
         alt="hero image"
         class="hero-image"
         id="hero-img"
+      />
+      <div class="hero-description">
+        <div class="line line-light"></div>
+        <h1 class="hero-heading">Humanizing your insurance.</h1>
+        <p>
+          Get your life insurance coverage easier and faster. We blend our
+          expertise and technology to help you find the plan that’s right for
+          you. Ensure you and your loved ones are protected.
+        </p>
+        <a href="#" class="btn cta-btn">View Plans</a>
+      </div>
+      <img
+        src="images/bg-pattern-intro-right-desktop.svg"
+        alt="bg-pattern-intro-right"
+        class="bg-pattern-intro-right"
         />
-        <div class="hero-description">
-          <div class="line line-light"></div>
-          <h1 class="hero-heading">Humanizing your insurance.</h1>
-          <p>
-            Get your life insurance coverage easier and faster. We blend our
-            expertise and technology to help you find the plan that’s right for
-            you. Ensure you and your loved ones are protected.
-          </p>
-          <a href="#" class="btn cta-btn">View Plans</a>
-        </div>  
-        <img src="images/bg-pattern-intro-right-desktop.svg" alt="bg-pattern-intro-right" class="bg-pattern-intro-right"/>
-        <img src="images/bg-pattern-intro-left-desktop.svg"  alt="bg-pattern-intro-left" class="bg-pattern-intro-left"/>
+        <img
+          src="images/bg-pattern-intro-left-desktop.svg"
+          alt="bg-pattern-intro-left"
+          class="bg-pattern-intro-left"
+        />
     </section>
 
     <section class="info-section container">
@@ -112,8 +120,12 @@
         <div class="social-icons">
           <a href="#"><img src="images/icon-facebook.svg" alt="facebook" /></a>
           <a href="#"><img src="images/icon-twitter.svg" alt="twitter" /></a>
-          <a href="#"><img src="images/icon-pinterest.svg" alt="pinterest" /></a>
-          <a href="#"><img src="images/icon-instagram.svg" alt="instagram" /></a>
+          <a href="#"
+            ><img src="images/icon-pinterest.svg" alt="pinterest"
+          /></a>
+          <a href="#"
+            ><img src="images/icon-instagram.svg" alt="instagram"
+          /></a>
         </div>
       </div>
       <div class="other-links">
@@ -181,7 +193,10 @@
       Challenge by
       <a href="https://www.frontendmentor.io?ref=challenge" target="_blank"
         >Frontend Mentor</a
-      >. Coded by <a href="https://www.linkedin.com/in/deepak-maurya-b62010157/">Deepak Maurya</a>.
+      >. Coded by
+      <a href="https://www.linkedin.com/in/deepak-maurya-b62010157/"
+        >Deepak Maurya</a
+      >.
     </div>
     <script src="index.js"></script>
   </body>
